syntax = "proto3";

package mail_proto;
option go_package = "./mail_proto";

message UID {
  uint64 uID = 1;
}

message UserFolder {
  uint64 UID = 1;
  string FolderSlug = 2;
}

message UIDMessageID {
  uint64 UID = 1;
  uint64 MessageID = 2;
}

message UIDMessageIDFolderSlug {
  uint64 UID = 1;
  uint64 MessageID = 2;
  string FolderSlug = 3;
}

message Recipients {
  repeated string Recipients = 1;
}

message Message {
  repeated string  Recipients = 1;
  string Title = 2;
  string Text = 3;
  UID ReplyToMessageID = 4;
}

message SendMessageParams {
  uint64 UID = 1;
  Message Message = 2;
}

message FailedEmailsParams {
  string Recipient = 1;
  repeated string InvalidEmails = 2;
}

message RecipientEmail {
  string RecipientEmail = 1;
}

message Folder {
  uint64 FolderID = 1;
  uint64 UserID = 2;
  string LocalName = 3;
  string Name = 4;
  int64 MessagesUnseen = 5;
  int64 MessagesCount = 6;
}

message FoldersResponse {
  repeated Folder Folders = 1;
}

message FormFolder {
  string Name = 1;
}

message CreateFolderParams {
  uint64 UID = 1;
  FormFolder FormFolder = 2;
}

message DeleteFolderParams {
  uint64 UID = 1;
  string FolderSlug = 2;
}

message EditFolderParams {
  uint64 UID = 1;
  string FolderSlug = 2;
  FormFolder FormFolder = 3;
}

message SaveDraftParams {
  uint64 UID = 1;
  Message Message = 2;
}

message MoveToFolderParams{
  uint64 UID = 1;
  uint64 MessageID = 2;
  string FromFolderSlug = 3;
  string ToFolderSlug = 4;
}

message EditDraftParams {
  uint64 UID = 1;
  uint64 MessageID = 2;
  Message Message = 3;
}

message UserInfo {
  string Email = 1;
  string FirstName = 2;
  string LastName = 3;
}

message SearchRecipientsResponse {
  repeated UserInfo UsersInfo= 1;
}

message MessageInfo {
  uint64 MessageID = 1;
  UserInfo FromUser = 2;
  repeated UserInfo Recipients = 3;
  string Title = 4;
  string CreatedAt = 5;
  string Text = 6;
  UID ReplyToMessageID = 7;
  MessageInfo ReplyTo = 8;
  bool Seen = 9;
  bool Favorite = 10;
  bool Deleted = 11;
}

message ValidateRecipientsResponse {
  repeated string ValidEmails = 1;
  repeated string InvalidEmails = 2;
}

message MessagesInfoResponse {
  repeated MessageInfo MessagesInfo = 1;
}

message SearchMailParams{
  uint64 UID = 1;
  string FromUser = 2;
  string ToUser = 3;
  string Folder = 4;
  string Filter = 5;
}

message Nothing {
  bool dummy = 1;
}

service MailService {
  rpc GetFolders(UID) returns (FoldersResponse) {}
  rpc GetFolderInfo(UserFolder) returns (Folder){}
  rpc GetFolderMessages(UserFolder) returns (MessagesInfoResponse) {}
  rpc SearchMessages(SearchMailParams) returns (MessagesInfoResponse) {}
  rpc SearchRecipients(UID) returns (SearchRecipientsResponse) {}
  rpc CreateDefaultFolders(UID) returns (FoldersResponse) {}
  rpc GetMessage(UIDMessageID) returns (MessageInfo) {}
  rpc ValidateRecipients(Recipients) returns (ValidateRecipientsResponse) {}
  rpc SendMessage(SendMessageParams) returns (MessageInfo) {}
  rpc SendFailedSendingMessage(FailedEmailsParams) returns (Nothing) {}
  rpc SendWelcomeMessage(RecipientEmail) returns (Nothing) {}
  rpc MarkMessageAsSeen(UIDMessageIDFolderSlug) returns (MessageInfo) {}
  rpc MarkMessageAsUnseen(UIDMessageIDFolderSlug) returns (MessageInfo) {}
  rpc CreateFolder(CreateFolderParams) returns (Folder) {}
  rpc DeleteFolder(DeleteFolderParams) returns (Nothing) {}
  rpc EditFolder(EditFolderParams) returns (Folder) {}
  rpc DeleteMessage(UIDMessageIDFolderSlug) returns (Nothing) {}
  rpc SaveDraft(SaveDraftParams) returns (MessageInfo) {}
  rpc EditDraft(EditDraftParams) returns (MessageInfo) {}
  rpc MoveMessageToFolder(MoveToFolderParams) returns (Nothing) {}
  rpc GetCustomFolders(UID) returns (FoldersResponse) {}
}
